# bitvm2-node

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  ci_scheduled.yml  docker.yml  docker_covenant.yml
cli/: Cargo.toml
cli/src/: main.rs
covenant/: .env.continuous  .env.example  Cargo.toml  Dockerfile-aggregation  Dockerfile-continuous  README-docker.md  README.md  docker-compose.yml  docker.sh
covenant/aggregation/: .env.example  .env.template  Cargo.toml
covenant/aggregation/src/: cli.rs  db.rs  executor.rs  main.rs
covenant/continuous/: .env.example  Cargo.toml  build.rs
covenant/continuous/src/: cli.rs  db.rs  main.rs
covenant/groth16/: Cargo.toml
covenant/groth16/src/: lib.rs  test.rs
covenant/guest/: Cargo.toml
covenant/guest-aggregation/: Cargo.toml
covenant/guest-v2/: Cargo.toml
covenant/guest-v2/src/: main.rs
covenant/guest/src/: bitcoin_light_client.rs  header_chain_circuit.rs  main.rs
covenant/host/: Cargo.toml
covenant/host/src/: main.rs
crates/actors/src/: lib.rs
crates/bitvm2/: Cargo.toml
crates/bitvm2/src/: actors.rs  keys.rs  lib.rs  pegin.rs  types.rs
crates/bitvm2/src/committee/: api.rs  mod.rs
crates/bitvm2/src/federation/: api.rs
crates/bitvm2/src/operator/: api.rs  mod.rs
crates/bitvm2/src/verifier/: api.rs  mod.rs
crates/bitvm2/tests/: e2e.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs
crates/client/src/chain/: chain_adaptor.rs  goat_adaptor.rs  mock_addaptor.rs  utils.rs
crates/consensus-light-client/: Cargo.toml  build.rs
crates/consensus-light-client/proto/: tx.proto
crates/consensus-light-client/src/: cometbft.rs  consensus.rs  lib.rs
crates/consensus-light-client/src/samples/: README.md  light_block_1.json  light_block_5756785.json
crates/header-chain/: Cargo.toml
crates/header-chain/src/: header_chain.rs  lib.rs  spv.rs  transaction.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs  musig2.rs
crates/network/src/: lib.rs  unjoin.rs
crates/spv/: Cargo.toml
crates/spv/src/: fetcher.rs  header_chain.rs  lib.rs  merkle_tree.rs  mmr.rs
crates/store/: Cargo.toml
crates/store/src/: ipfs.rs  lib.rs  localdb.rs  schema.rs
node/: Cargo.toml  README.md
node/docs/: API.md
node/src/: action.rs  config.rs  env.rs  main.rs  metrics_service.rs  relayer_action.rs  tests.rs  types.rs  utils.rs
node/src/bitcoin/: checker.rs  fetcher.rs
node/src/client/: graph_query.rs  mod.rs
node/src/middleware/: Cargo.toml  behaviour.rs  mod.rs
node/src/middleware/authenticator/: client.rs  mod.rs  musig.rs
node/src/rpc_service/: bitvm2.rs  covenant.rs  mod.rs  node.rs  proof.rs
node/src/rpc_service/handler/: bitvm2_handler.rs  node_handler.rs  proof_handler.rs
scripts/: bitcoin-init.sh  docker-compose.yml  start_bitcoind.sh
