[package]
name = "groth16"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
tokio.workspace = true
tracing.workspace = true

# zkMIPS
zkm-sdk.workspace = true
zkm-prover.workspace = true

store = { path = "../../crates/store" }

[build-dependencies]
zkm-build.workspace = true
