[workspace]
[package]
name = "covenant-guest-v2"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
bincode = "1.3.3"
# workspace
guest-executor = { git = "https://github.com/ProjectZKM/reth-processor" }
#header-chain = { path = "../../crates/header-chain" }
#bitcoin = { git = "https://github.com/eigmax/rust-bitcoin", branch = "patch-0.32.7", default-features = false, features = ["serde", "rand", "secp-recovery"] }

# Ziren
zkm-zkvm = { git = "https://github.com/ProjectZKM/Ziren", package = "zkm-zkvm" }

# Statically turns off logging
log = { version = "0.4", features = ["max_level_off", "release_max_level_off"] }
tracing = { version = "0.1", features = ["max_level_off", "release_max_level_off"] }


alloy-primitives = { version = "1.0.0", default-features = false, features = ["sha3-keccak", "map-foldhash"] }
revm = { git = "https://github.com/ziren-patches/revm", branch = "patch-22.0.0", features = [
    "serde",
    "kzg-rs",
    "bn",
], default-features = false }


[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/ziren-patches/RustCrypto-hashes", branch = "patch-sha2-0.10.8", package = "sha2" }
bn = { git = "https://github.com/ziren-patches/bn", branch = "patch-0.6.0", package = "substrate-bn" }
k256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-k256-0.13.4" }
p256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-p256-0.13.2" }
alloy-primitives-v1-0-0 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.0.0" }
alloy-primitives-v1-1-0 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.1.0" }
alloy-primitives-v1-1-2 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.1.2" }
#secp256k1-v0-29-1 = { git = "https://github.com/ziren-patches/rust-secp256k1", package = "secp256k1", branch = "patch-0.29.1" }
secp256k1-v0-30-0 = { git = "https://github.com/ziren-patches/rust-secp256k1", package = "secp256k1", branch = "patch-0.30.0" }
#secp256k1-sys = { git = "https://github.com/ziren-patches/rust-secp256k1", branch = "patch-0.30.0" }