[package]
name = "consensus-light-client"
version.workspace = true
edition.workspace = true

[dependencies]
tendermint = { git = "https://github.com/ProjectZKM/tendermint-rs", branch = "patch-0.40.3", default-features = false, features = ["secp256k1"] }
#tendermint = { path = "../../../tendermint-rs/tendermint", default-features = false, features = ["secp256k1"] }
tendermint-light-client-verifier = { git = "https://github.com/ProjectZKM/tendermint-rs", branch = "patch-0.40.3", default-features = false, features = [
#tendermint-light-client-verifier = { path = "../../../tendermint-rs/light-client-verifier", default-features = false, features = [
  "rust-crypto",
] }
bincode = "1.3.3"
sha2 = "0.10.8"
prost = { version = "0.13", default-features = false, features = ["prost-derive"] }
prost-derive = { version = "0.13", default-features = false }
serde = { version = "1.0", features = ["derive"] }
cosmos-sdk-proto = { version = "0.27", default-features = false, features = ["serde"] }
hex = "*"
base64 = "0.21"

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
prost-build = "0.13"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/ziren-patches/curve25519-dalek", branch = "patch-4.1.3" }
ecdsa-core = { git = "https://github.com/ziren-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-0.16.9" }
rsa = { git = "https://github.com/ziren-patches/RustCrypto-RSA.git", branch = "patch-rsa-0.9.6" }
secp256k1 = { git = "https://github.com/ziren-patches/rust-secp256k1", branch = "patch-0.29.1" }
sha2-v0-10-8 = { git = "https://github.com/ziren-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-0.10.8" }
substrate-bn = { git = "https://github.com/ziren-patches/bn", branch = "patch-0.6.0" }
k256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-k256-0.13.4" }
p256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-p256-0.13.2" }
