[package]
name = "header-chain"
version.workspace = true
edition.workspace = true
#resolver.workspace = true

[dependencies]
borsh = {version = "1.5.3", features = ["derive"] }
sha2 =  { version = "0.10.8", default-features = false }
bitcoin = { workspace = true, features = ["serde", "rand", "secp-recovery"] }
serde = { version = "1.0", default-features = false }
crypto-bigint = { version = "0.5.5", default-features = false }

[dev-dependencies]
hex-literal = "1.0.0"

[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/ziren-patches/RustCrypto-hashes", branch = "patch-sha2-0.10.8", package = "sha2" }
bn = { git = "https://github.com/ziren-patches/bn", branch = "patch-0.6.0", package = "substrate-bn" }
k256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-k256-0.13.4" }
p256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-p256-0.13.2" }
alloy-primitives-v1-0-0 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.0.0" }
alloy-primitives-v1-1-0 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.1.0" }
alloy-primitives-v1-1-2 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.1.2" }
secp256k1 = { git = "https://github.com/ziren-patches/rust-secp256k1", branch = "patch-0.30.0" }
