[package]
name = "spv"
version.workspace = true
edition.workspace = true
#resolver.workspace = true

[dependencies]
borsh = {version = "1.5.3", features = ["derive"] }
sha2 =  { version = "0.10.8", default-features = false }
crypto-bigint = { version = "0.5.5", default-features = false }
blake3 = { version = "1.5.0", default-features = false }
bitcoin = { workspace = true }
serde = { workspace = true }
esplora-client = { workspace = true }
bitvm = { workspace = true }
anyhow = { workspace = true }
tokio = {workspace = true}
futures = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
hex-literal = "0.4.1"