[package]
name = "store"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = {  version = "0.8.3", features = [ "sqlite", "runtime-tokio", "uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = "0.1.41"

futures = { workspace = true }
futures-util = "0.3"
tokio = { workspace = true }
reqwest = { version = "0.11.24", features = ["multipart", "json"]}
serde_json = { workspace = true }