[package]
name = "network"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
serde = {  workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }